chore: adding the bypass alias check to the example nuke configuration

--- a/examples/basic/assets/nuke-config.yml.example
+++ b/examples/basic/assets/nuke-config.yml.example
@@ -6,6 +6,9 @@ regions:
   - global
   - ${region}
 
+bypass-alias-check-accounts:
+  - ${account_id}
+
 resource-types:
   includes:
     - AWSBackupRecoveryPoint
