--- a/examples/basic/assets/nuke-config.yml.example
+++ b/examples/basic/assets/nuke-config.yml.example
@@ -4,10 +4,10 @@ blocklist:
 
 regions:
   - global
-  - ${region}
+  - eu-west-2
 
 bypass-alias-check-accounts:
-  - ${account_id}
+  - 817293608714
 
 resource-types:
   includes:
@@ -305,6 +305,8 @@ resource-types:
     - S3Object
     - ServiceCatalogTagOption
     - ServiceCatalogTagOptionPortfolioAttachment
+    - IAMRole
+    - IAMUser
 
 presets:
   landing-zone:
@@ -408,7 +410,7 @@ presets:
 
 accounts:
   ## Provided to the template function
-  ${account_id}:
+  817293608714:
     presets:
       - cloud-intelligence
       - control-tower
