--- a/.trivyignore
+++ b/.trivyignore
@@ -3,3 +3,4 @@ AVD-DS-0002   # https://avd.aquasec.com/misconfig/dockerfile/general/avd-ds-0002
 AVD-DS-0013   # https://avd.aquasec.com/misconfig/dockerfile/general/avd-ds-0013/
 AVD-DS-0015   # https://avd.aquasec.com/misconfig/dockerfile/general/avd-ds-0015/
 AVD-DS-0026   # https://avd.aquasec.com/misconfig/dockerfile/general/avd-ds-0026/
+AVD-AWS-0066  # https://avd.aquasec.com/misconfig/aws/lambda/avd-aws-0066/
